src/validation/tests/snapshots/rusty__validation__tests__enum_validation_test__enum_variants_mismatch_but_values_are_identical.snap
---
source: src/validation/tests/enum_validation_test.rs
expression: diagnostics
---
error: Consider using enums with the same kind
   ┌─ <internal>:11:22
   │
11 │             color := Dog;       // warning
   │                      ^^^ Consider using enums with the same kind

error: Consider using enums with the same kind
   ┌─ <internal>:12:22
   │
12 │             water := blue;      // warning
   │                      ^^^^ Consider using enums with the same kind

error: Consider using enums with the same kind
   ┌─ <internal>:13:22
   │
13 │             color := sparkling; // warning
   │                      ^^^^^^^^^ Consider using enums with the same kind

error: Consider using enums rather than literal integers
   ┌─ <internal>:14:22
   │
14 │             color := 2;         // warning
   │                      ^ Consider using enums rather than literal integers


